# salt-storage

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tox.ini
storage/: __init__.py  app.py  auth.py  submission.py
storage/repository/: __init__.py  submission_repository.py
tests/: test_auth.py  test_storage.py
